made to choose countrues and cities

--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
     "name": "wether-app",
+    "scheme": "wether-app",
     "slug": "wether-app",
     "version": "1.0.0",
     "orientation": "portrait",
