--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "2.11.1",
     "expo": "~53.0.20",
+    "expo-font": "~13.3.2",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-router": "~5.1.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-safe-area-context": "5.4.0",
-    "expo-router": "~5.1.4",
-    "expo-font": "~13.3.2",
-    "expo-linear-gradient": "~14.1.5",
-    "react-native-svg": "15.11.2"
+    "react-native-select-dropdown": "^4.0.1",
+    "react-native-svg": "15.11.2",
+    "expo-blur": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
