--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-picker/picker": "2.11.1",
     "expo": "~53.0.20",
+    "expo-blur": "~14.1.5",
     "expo-font": "~13.3.2",
     "expo-linear-gradient": "~14.1.5",
     "expo-router": "~5.1.4",
@@ -20,7 +21,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "15.11.2",
-    "expo-blur": "~14.1.5"
+    "transliteration": "^2.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
